# django3-todowoo-project

./: db.sqlite3  pyproject.toml
api/: serializers.py  urls.py  views.py
todowoo/: urls.py
