[tool.poetry]
name = "django3-todowoo-project"
version = "0.1.0"
description = ""
authors = ["h17bovi <fidelis.et.fort@gmail.com>"]
readme = "README.md"
packages = [{include = "django3_todowoo_project"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.6"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
